Fix contents columns alignment

--- a/plugins/solr/public/style.css
+++ b/plugins/solr/public/style.css
@@ -4,11 +4,8 @@
 }
 
 #search-column-right .search-customize-options {
-  position: absolute;
   margin: 0;
   padding: 5px 0;
-  bottom: 0;
-  left: 0;
 }
 
 #search-column-right .search-results-box .vcard {
